objects/ssot__ViolationTypeAssessmentInd__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AssessmentIndicatorDefinitionId__c</fullName>
        <label>Assessment Indicator Definition</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Violation Type Assessment Ind Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ViolationTypeId__c</fullName>
        <label>Violation Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1739512777623_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ViolationTypeAssessmentInd_Assessmen_rel</label>
        <referenceTo>ssot__AssessmentIndicatorDefinition__dlm</referenceTo>
        <relationshipLabel>ViolationTypeAssessmentInd_Assessmen_rel</relationshipLabel>
        <relationshipName>rel_1739512777623_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1739512785843_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ViolationTypeAssessmentInd_Violation_rel</label>
        <referenceTo>ssot__ViolationType__dlm</referenceTo>
        <relationshipLabel>ViolationTypeAssessmentInd_Violation_rel</relationshipLabel>
        <relationshipName>rel_1739512785843_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>